[gd_scene load_steps=4 format=3 uid="uid://bjlmutuo17bom"]

[ext_resource type="Script" uid="uid://beswgh0tr5ovh" path="res://Scripts/CardSlot.gd" id="1_pyu5f"]
[ext_resource type="Texture2D" uid="uid://cbhbc2b2gt8j1" path="res://Art/MarketSlot.png" id="2_r25uo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rkd0j"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MarketSlot" type="Panel"]
custom_minimum_size = Vector2(168, 208)
offset_right = 168.0
offset_bottom = 208.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rkd0j")
script = ExtResource("1_pyu5f")

[node name="CardHolder" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -4.0
offset_top = -2.0
offset_right = 164.0
offset_bottom = 206.0
mouse_filter = 2
texture = ExtResource("2_r25uo")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
